--- a/DutchTreat/wwwroot/index.html
+++ b/DutchTreat/wwwroot/index.html
@@ -39,5 +39,7 @@
             <input type="submit" value="Send Message" />
         </form>
     </div>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
