--- a/DutchTreat/wwwroot/index.html
+++ b/DutchTreat/wwwroot/index.html
@@ -15,7 +15,7 @@
             <li>Title: </li>
             <li>Description: Self-portrait</li>
         </ul>
-        <button>Buy</button>
+        <button id="buyButton">Buy</button>
     </div>
 
     <div id="theForm">
@@ -39,7 +39,7 @@
             <input type="submit" value="Send Message" />
         </form>
     </div>
-
+    <script src="lib/jQuery/dist/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
